cicdvpcecs/cdk.out/cicd-vpc-ecs-laravel-api.template.json
{
 "Resources": {
  "cicdvpcnonprodlaravelapi749191DF": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "cicd-vpc-ecs-laravel-api/cicd-vpc-nonprod-laravel-api"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-vpc-nonprod-laravel-api/Resource"
   }
  },
  "cicdvpcnonprodlaravelapiPublicSubnet1Subnet4959D46D": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "cicdvpcnonprodlaravelapi749191DF"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "cicd-vpc-ecs-laravel-api/cicd-vpc-nonprod-laravel-api/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-vpc-nonprod-laravel-api/PublicSubnet1/Subnet"
   }
  },
  "cicdvpcnonprodlaravelapiPublicSubnet1RouteTable6A856D4A": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "cicdvpcnonprodlaravelapi749191DF"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "cicd-vpc-ecs-laravel-api/cicd-vpc-nonprod-laravel-api/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-vpc-nonprod-laravel-api/PublicSubnet1/RouteTable"
   }
  },
  "cicdvpcnonprodlaravelapiPublicSubnet1RouteTableAssociation9CDC28F8": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "cicdvpcnonprodlaravelapiPublicSubnet1RouteTable6A856D4A"
    },
    "SubnetId": {
     "Ref": "cicdvpcnonprodlaravelapiPublicSubnet1Subnet4959D46D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-vpc-nonprod-laravel-api/PublicSubnet1/RouteTableAssociation"
   }
  },
  "cicdvpcnonprodlaravelapiPublicSubnet1DefaultRoute5455EAC9": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "cicdvpcnonprodlaravelapiPublicSubnet1RouteTable6A856D4A"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "cicdvpcnonprodlaravelapiIGW746290A4"
    }
   },
   "DependsOn": [
    "cicdvpcnonprodlaravelapiVPCGW899036FE"
   ],
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-vpc-nonprod-laravel-api/PublicSubnet1/DefaultRoute"
   }
  },
  "cicdvpcnonprodlaravelapiPublicSubnet1EIPDD02EE17": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "cicd-vpc-ecs-laravel-api/cicd-vpc-nonprod-laravel-api/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-vpc-nonprod-laravel-api/PublicSubnet1/EIP"
   }
  },
  "cicdvpcnonprodlaravelapiPublicSubnet1NATGateway43AD6FD4": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "cicdvpcnonprodlaravelapiPublicSubnet1Subnet4959D46D"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "cicdvpcnonprodlaravelapiPublicSubnet1EIPDD02EE17",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "cicd-vpc-ecs-laravel-api/cicd-vpc-nonprod-laravel-api/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-vpc-nonprod-laravel-api/PublicSubnet1/NATGateway"
   }
  },
  "cicdvpcnonprodlaravelapiPublicSubnet2SubnetCF5912D2": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "cicdvpcnonprodlaravelapi749191DF"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "cicd-vpc-ecs-laravel-api/cicd-vpc-nonprod-laravel-api/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-vpc-nonprod-laravel-api/PublicSubnet2/Subnet"
   }
  },
  "cicdvpcnonprodlaravelapiPublicSubnet2RouteTableC043887E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "cicdvpcnonprodlaravelapi749191DF"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "cicd-vpc-ecs-laravel-api/cicd-vpc-nonprod-laravel-api/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-vpc-nonprod-laravel-api/PublicSubnet2/RouteTable"
   }
  },
  "cicdvpcnonprodlaravelapiPublicSubnet2RouteTableAssociation428615AF": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "cicdvpcnonprodlaravelapiPublicSubnet2RouteTableC043887E"
    },
    "SubnetId": {
     "Ref": "cicdvpcnonprodlaravelapiPublicSubnet2SubnetCF5912D2"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-vpc-nonprod-laravel-api/PublicSubnet2/RouteTableAssociation"
   }
  },
  "cicdvpcnonprodlaravelapiPublicSubnet2DefaultRoute42C2C9E8": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "cicdvpcnonprodlaravelapiPublicSubnet2RouteTableC043887E"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "cicdvpcnonprodlaravelapiIGW746290A4"
    }
   },
   "DependsOn": [
    "cicdvpcnonprodlaravelapiVPCGW899036FE"
   ],
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-vpc-nonprod-laravel-api/PublicSubnet2/DefaultRoute"
   }
  },
  "cicdvpcnonprodlaravelapiPublicSubnet2EIPB6E40FAC": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "cicd-vpc-ecs-laravel-api/cicd-vpc-nonprod-laravel-api/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-vpc-nonprod-laravel-api/PublicSubnet2/EIP"
   }
  },
  "cicdvpcnonprodlaravelapiPublicSubnet2NATGateway8BAF81A5": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "cicdvpcnonprodlaravelapiPublicSubnet2SubnetCF5912D2"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "cicdvpcnonprodlaravelapiPublicSubnet2EIPB6E40FAC",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "cicd-vpc-ecs-laravel-api/cicd-vpc-nonprod-laravel-api/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-vpc-nonprod-laravel-api/PublicSubnet2/NATGateway"
   }
  },
  "cicdvpcnonprodlaravelapiPrivateSubnet1Subnet1B0D1602": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "cicdvpcnonprodlaravelapi749191DF"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "cicd-vpc-ecs-laravel-api/cicd-vpc-nonprod-laravel-api/PrivateSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-vpc-nonprod-laravel-api/PrivateSubnet1/Subnet"
   }
  },
  "cicdvpcnonprodlaravelapiPrivateSubnet1RouteTable6FD2BD2D": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "cicdvpcnonprodlaravelapi749191DF"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "cicd-vpc-ecs-laravel-api/cicd-vpc-nonprod-laravel-api/PrivateSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-vpc-nonprod-laravel-api/PrivateSubnet1/RouteTable"
   }
  },
  "cicdvpcnonprodlaravelapiPrivateSubnet1RouteTableAssociation43B367BC": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "cicdvpcnonprodlaravelapiPrivateSubnet1RouteTable6FD2BD2D"
    },
    "SubnetId": {
     "Ref": "cicdvpcnonprodlaravelapiPrivateSubnet1Subnet1B0D1602"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-vpc-nonprod-laravel-api/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "cicdvpcnonprodlaravelapiPrivateSubnet1DefaultRoute27DDC11B": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "cicdvpcnonprodlaravelapiPrivateSubnet1RouteTable6FD2BD2D"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "cicdvpcnonprodlaravelapiPublicSubnet1NATGateway43AD6FD4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-vpc-nonprod-laravel-api/PrivateSubnet1/DefaultRoute"
   }
  },
  "cicdvpcnonprodlaravelapiPrivateSubnet2Subnet3D6D7C29": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "cicdvpcnonprodlaravelapi749191DF"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "cicd-vpc-ecs-laravel-api/cicd-vpc-nonprod-laravel-api/PrivateSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-vpc-nonprod-laravel-api/PrivateSubnet2/Subnet"
   }
  },
  "cicdvpcnonprodlaravelapiPrivateSubnet2RouteTable75635C77": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "cicdvpcnonprodlaravelapi749191DF"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "cicd-vpc-ecs-laravel-api/cicd-vpc-nonprod-laravel-api/PrivateSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-vpc-nonprod-laravel-api/PrivateSubnet2/RouteTable"
   }
  },
  "cicdvpcnonprodlaravelapiPrivateSubnet2RouteTableAssociation6DF56727": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "cicdvpcnonprodlaravelapiPrivateSubnet2RouteTable75635C77"
    },
    "SubnetId": {
     "Ref": "cicdvpcnonprodlaravelapiPrivateSubnet2Subnet3D6D7C29"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-vpc-nonprod-laravel-api/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "cicdvpcnonprodlaravelapiPrivateSubnet2DefaultRoute425AFF7B": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "cicdvpcnonprodlaravelapiPrivateSubnet2RouteTable75635C77"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "cicdvpcnonprodlaravelapiPublicSubnet2NATGateway8BAF81A5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-vpc-nonprod-laravel-api/PrivateSubnet2/DefaultRoute"
   }
  },
  "cicdvpcnonprodlaravelapiIGW746290A4": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "cicd-vpc-ecs-laravel-api/cicd-vpc-nonprod-laravel-api"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-vpc-nonprod-laravel-api/IGW"
   }
  },
  "cicdvpcnonprodlaravelapiVPCGW899036FE": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "VpcId": {
     "Ref": "cicdvpcnonprodlaravelapi749191DF"
    },
    "InternetGatewayId": {
     "Ref": "cicdvpcnonprodlaravelapiIGW746290A4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-vpc-nonprod-laravel-api/VPCGW"
   }
  },
  "cicdprodlaravelapiE6AA3FFE": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "cicd-vpc-ecs-laravel-api/cicd-prod-laravel-api"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-prod-laravel-api/Resource"
   }
  },
  "cicdprodlaravelapiPublicSubnet1Subnet2889C679": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "cicdprodlaravelapiE6AA3FFE"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "cicd-vpc-ecs-laravel-api/cicd-prod-laravel-api/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-prod-laravel-api/PublicSubnet1/Subnet"
   }
  },
  "cicdprodlaravelapiPublicSubnet1RouteTable718E12E5": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "cicdprodlaravelapiE6AA3FFE"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "cicd-vpc-ecs-laravel-api/cicd-prod-laravel-api/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-prod-laravel-api/PublicSubnet1/RouteTable"
   }
  },
  "cicdprodlaravelapiPublicSubnet1RouteTableAssociation53EE904B": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "cicdprodlaravelapiPublicSubnet1RouteTable718E12E5"
    },
    "SubnetId": {
     "Ref": "cicdprodlaravelapiPublicSubnet1Subnet2889C679"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-prod-laravel-api/PublicSubnet1/RouteTableAssociation"
   }
  },
  "cicdprodlaravelapiPublicSubnet1DefaultRouteD6DBBFE6": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "cicdprodlaravelapiPublicSubnet1RouteTable718E12E5"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "cicdprodlaravelapiIGW672D4DA3"
    }
   },
   "DependsOn": [
    "cicdprodlaravelapiVPCGW22144461"
   ],
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-prod-laravel-api/PublicSubnet1/DefaultRoute"
   }
  },
  "cicdprodlaravelapiPublicSubnet1EIPF08C2903": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "cicd-vpc-ecs-laravel-api/cicd-prod-laravel-api/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-prod-laravel-api/PublicSubnet1/EIP"
   }
  },
  "cicdprodlaravelapiPublicSubnet1NATGateway4B54F243": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "cicdprodlaravelapiPublicSubnet1Subnet2889C679"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "cicdprodlaravelapiPublicSubnet1EIPF08C2903",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "cicd-vpc-ecs-laravel-api/cicd-prod-laravel-api/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-prod-laravel-api/PublicSubnet1/NATGateway"
   }
  },
  "cicdprodlaravelapiPublicSubnet2SubnetFC1DB77D": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "cicdprodlaravelapiE6AA3FFE"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "cicd-vpc-ecs-laravel-api/cicd-prod-laravel-api/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-prod-laravel-api/PublicSubnet2/Subnet"
   }
  },
  "cicdprodlaravelapiPublicSubnet2RouteTableE6F0F561": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "cicdprodlaravelapiE6AA3FFE"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "cicd-vpc-ecs-laravel-api/cicd-prod-laravel-api/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-prod-laravel-api/PublicSubnet2/RouteTable"
   }
  },
  "cicdprodlaravelapiPublicSubnet2RouteTableAssociation53CC7B2E": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "cicdprodlaravelapiPublicSubnet2RouteTableE6F0F561"
    },
    "SubnetId": {
     "Ref": "cicdprodlaravelapiPublicSubnet2SubnetFC1DB77D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-prod-laravel-api/PublicSubnet2/RouteTableAssociation"
   }
  },
  "cicdprodlaravelapiPublicSubnet2DefaultRoute2CC216F0": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "cicdprodlaravelapiPublicSubnet2RouteTableE6F0F561"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "cicdprodlaravelapiIGW672D4DA3"
    }
   },
   "DependsOn": [
    "cicdprodlaravelapiVPCGW22144461"
   ],
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-prod-laravel-api/PublicSubnet2/DefaultRoute"
   }
  },
  "cicdprodlaravelapiPublicSubnet2EIP5998FFD8": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "cicd-vpc-ecs-laravel-api/cicd-prod-laravel-api/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-prod-laravel-api/PublicSubnet2/EIP"
   }
  },
  "cicdprodlaravelapiPublicSubnet2NATGatewayECA2838A": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "cicdprodlaravelapiPublicSubnet2SubnetFC1DB77D"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "cicdprodlaravelapiPublicSubnet2EIP5998FFD8",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "cicd-vpc-ecs-laravel-api/cicd-prod-laravel-api/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-prod-laravel-api/PublicSubnet2/NATGateway"
   }
  },
  "cicdprodlaravelapiPrivateSubnet1Subnet31F64209": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "cicdprodlaravelapiE6AA3FFE"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "cicd-vpc-ecs-laravel-api/cicd-prod-laravel-api/PrivateSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-prod-laravel-api/PrivateSubnet1/Subnet"
   }
  },
  "cicdprodlaravelapiPrivateSubnet1RouteTable54B8C122": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "cicdprodlaravelapiE6AA3FFE"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "cicd-vpc-ecs-laravel-api/cicd-prod-laravel-api/PrivateSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-prod-laravel-api/PrivateSubnet1/RouteTable"
   }
  },
  "cicdprodlaravelapiPrivateSubnet1RouteTableAssociation4D52CB65": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "cicdprodlaravelapiPrivateSubnet1RouteTable54B8C122"
    },
    "SubnetId": {
     "Ref": "cicdprodlaravelapiPrivateSubnet1Subnet31F64209"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-prod-laravel-api/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "cicdprodlaravelapiPrivateSubnet1DefaultRoute2A70E9A6": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "cicdprodlaravelapiPrivateSubnet1RouteTable54B8C122"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "cicdprodlaravelapiPublicSubnet1NATGateway4B54F243"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-prod-laravel-api/PrivateSubnet1/DefaultRoute"
   }
  },
  "cicdprodlaravelapiPrivateSubnet2SubnetEF992275": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "cicdprodlaravelapiE6AA3FFE"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "cicd-vpc-ecs-laravel-api/cicd-prod-laravel-api/PrivateSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-prod-laravel-api/PrivateSubnet2/Subnet"
   }
  },
  "cicdprodlaravelapiPrivateSubnet2RouteTableE74BD4E5": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "cicdprodlaravelapiE6AA3FFE"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "cicd-vpc-ecs-laravel-api/cicd-prod-laravel-api/PrivateSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-prod-laravel-api/PrivateSubnet2/RouteTable"
   }
  },
  "cicdprodlaravelapiPrivateSubnet2RouteTableAssociation895219BA": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "cicdprodlaravelapiPrivateSubnet2RouteTableE74BD4E5"
    },
    "SubnetId": {
     "Ref": "cicdprodlaravelapiPrivateSubnet2SubnetEF992275"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-prod-laravel-api/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "cicdprodlaravelapiPrivateSubnet2DefaultRoute7E72B9E1": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "cicdprodlaravelapiPrivateSubnet2RouteTableE74BD4E5"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "cicdprodlaravelapiPublicSubnet2NATGatewayECA2838A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-prod-laravel-api/PrivateSubnet2/DefaultRoute"
   }
  },
  "cicdprodlaravelapiIGW672D4DA3": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "cicd-vpc-ecs-laravel-api/cicd-prod-laravel-api"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-prod-laravel-api/IGW"
   }
  },
  "cicdprodlaravelapiVPCGW22144461": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "VpcId": {
     "Ref": "cicdprodlaravelapiE6AA3FFE"
    },
    "InternetGatewayId": {
     "Ref": "cicdprodlaravelapiIGW672D4DA3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-prod-laravel-api/VPCGW"
   }
  },
  "cicdecsnonprodlaravelapi6344C7F0": {
   "Type": "AWS::ECS::Cluster",
   "Properties": {
    "ClusterName": "cicd-ecs-nonprod-laravel-api"
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-ecs-nonprod-laravel-api/Resource"
   }
  },
  "cicdecsnonprodlaravelapi715A4D72": {
   "Type": "AWS::ECS::ClusterCapacityProviderAssociations",
   "Properties": {
    "CapacityProviders": [
     "FARGATE"
    ],
    "Cluster": {
     "Ref": "cicdecsnonprodlaravelapi6344C7F0"
    },
    "DefaultCapacityProviderStrategy": []
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-ecs-nonprod-laravel-api/cicd-ecs-nonprod-laravel-api"
   }
  },
  "cicdecsprodlaravelapi78E5E251": {
   "Type": "AWS::ECS::Cluster",
   "Properties": {
    "ClusterName": "cicd-ecs-prod-laravel-api"
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-ecs-prod-laravel-api/Resource"
   }
  },
  "cicdecsprodlaravelapi03790523": {
   "Type": "AWS::ECS::ClusterCapacityProviderAssociations",
   "Properties": {
    "CapacityProviders": [
     "FARGATE"
    ],
    "Cluster": {
     "Ref": "cicdecsprodlaravelapi78E5E251"
    },
    "DefaultCapacityProviderStrategy": []
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/cicd-ecs-prod-laravel-api/cicd-ecs-prod-laravel-api"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/2WPQWvDMAyFf0vvrptsMHZcCWP0Mkw6encUlWpN7WLLLcH4v89ut3mwkz49PT2kVrbPjWwWL/rqlzAeVxGsQxm3rOEoevQ2OEDRWePZBWDR7U1V9yYPRmKyJomSEBEeZNydocx2qhMqDBPBNgwGb7uVehsYP/QwYdWrtvbeAumS/Gsu8LpRpbxrftOMVz0L5eiSsQZvDKPL/GO4X/LdrTk/djih4SQQvIzdFHz23375h50+ayCelbMXGtH9ucqnlISa+WDN6lG2jXxafHqipQuG6YSyv9cv1zVtV2ABAAA="
   },
   "Metadata": {
    "aws:cdk:path": "cicd-vpc-ecs-laravel-api/CDKMetadata/Default"
   },
   "Condition": "CDKMetadataAvailable"
  }
 },
 "Conditions": {
  "CDKMetadataAvailable": {
   "Fn::Or": [
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "af-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ca-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-northwest-1"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-3"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "sa-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-2"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-2"
       ]
      }
     ]
    }
   ]
  }
 }
}
